Agregue la fecha de nacimiento

--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -6,6 +6,7 @@
     <th>Apellido:</th>
     <th>Direccion:</th>
     <th>Edad:</th>
+<th>Fecha de Nacimiento</th>
     <th></th>
     <th></th>
     <th></th>
