Agrego el campo fecha de nacimiento

--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -19,7 +19,10 @@
   <b>Edad:</b>
   <%= @persona.edad %>
 </p>
-
+<p>
+  <b>Fecha de Nac:</b>
+  <%= @persona.fecha_nac %>
+</p>
 
 <%= link_to 'Edit', edit_persona_path(@persona) %> |
 <%= link_to 'Back', personas_path %>
