--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Nombre:</b>
+  <b>Nombres:</b>
   <%= @persona.nombre %>
 </p>
 
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-  <b>Direccion:</b>
+  <b>Direccion y Nº:</b>
   <%= @persona.direccion %>
 </p>
 
